Fix: Post Header titles + spacing

--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -12,7 +12,7 @@
 	}
 	a.home-link {
 		display: block;
-		position: absolute;
+		position: fixed;
 		left:5vw;
 		top:5vw;
 		z-index: 99;
