--- a/_sass/_post.scss
+++ b/_sass/_post.scss
@@ -1,6 +1,19 @@
 
 .post-header {
+    padding: 10vh 0 0 10vw;    
+    h1 {
+        color:#000;
+        .post-title {
+            font-size:2.2em;
+            font-weight: 500;
+        }
+        .post-subtitle {
+            font-size:1.6em;
+            margin:.25em 0 0 0;
+        }
+    }
     span.date {
+        font-weight: 1.3em;
         color:#aaa;
         font-weight:300;
         padding:0 0 0 1em;
